--- a/index.html
+++ b/index.html
@@ -10,63 +10,17 @@
     <script src="js.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <div id="tabela">
-        <table>
-            <tr id="linha1">
-                <td id="linha1-td1"></td>
-                <td id="linha1-td2"></td>
-                <td id="linha1-td3"></td>
-                <td id="linha1-td4"></td>
-                <td id="linha1-td5"></td>
+    <div id="container">
 
-            </tr>
-            <tr id="linha2">
-                <td id="linha2-td1"></td>
-                <td id="linha2-td2"></td>
-                <td id="linha2-td3"></td>
-                <td id="linha2-td4"></td>
-                <td id="linha2-td5"></td>
-            </tr>
-            <tr id="linha3">
-                <td id="linha3-td1"></td>
-                <td id="linha3-td2"></td>
-                <td id="linha3-td3"></td>
-                <td id="linha3-td4"></td>
-                <td id="linha3-td5"></td>
-            </tr>
-            <tr id="linha4">
-                <td id="linha4-td1"></td>
-                <td id="linha4-td2"></td>
-                <td id="linha4-td3"></td>
-                <td id="linha4-td4"></td>
-                <td id="linha4-td5"></td>
-            </tr>
-            <tr id="linha5">
-                <td id="linha5-td1"></td>
-                <td id="linha5-td2"></td>
-                <td id="linha5-td3"></td>
-                <td id="linha5-td4"></td>
-                <td id="linha5-td5"></td>
-            </tr>
-            <tr id="linha6">
-                <td id="linha6-td1"></td>
-                <td id="linha6-td2"></td>
-                <td id="linha6-td3"></td>
-                <td id="linha6-td4"></td>
-                <td id="linha6-td5"></td>
-            </tr>
-            <tr id="linharesultado">
-                <td id="resultado" colspan="5"></td>
-            </tr>
-        </table>
-        <!-- <form action="">
-            <input type="text" id="palavra">
-            <input type="button" value="enviar" id="botao">
-        </form> -->
+        <div id="topo">
+            <h1>termo dos guri</h1>
+        </div>
+        <div id="principal"></div>
+        <div id="teclado"></div>
     </div>
 </body>
 
