adicionando alguns efeitos e comentando os tópicos do trabalho

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
 
         <div id="topo">
-            <h1>termo dos guri</h1>
+            <h1>TERMO DOS GURI</h1>
         </div>
         <div id="principal"></div>
         <div id="teclado"></div>
